# arbor

./: CLAUDE.md  Cargo.toml  README.md  justfile
.beads/: .gitignore
.github/workflows/: ci.yml  codspeed.yml  release.yml
crates/arbor-core/: Cargo.toml
crates/arbor-core/src/: agent.rs  daemon.rs  lib.rs  process.rs  worktree.rs
crates/arbor-daemon-client/: Cargo.toml
crates/arbor-daemon-client/src/: lib.rs  types.rs
crates/arbor-gui/: Cargo.toml
crates/arbor-gui/src/: app_bootstrap.rs  app_config.rs  center_panel.rs  changes_pane.rs  command_palette.rs  config_refresh.rs  constants.rs  diff_engine.rs  github_service.rs  helpers.rs  issue_cache_store.rs  issue_details_modal.rs  key_handling.rs  log_layer.rs  log_view.rs  main.rs  mdns_browser.rs  sidebar.rs  simple_http_client.rs  terminal_backend.rs  terminal_daemon_http.rs  terminal_keys.rs  theme.rs  types.rs  ui_state_store.rs  ui_widgets.rs  workspace_layout.rs  workspace_navigation.rs  worktree_lifecycle.rs
crates/arbor-httpd/: Cargo.toml
crates/arbor-httpd/src/: auth.rs  file_agent_store.rs  issue_linking.rs  issue_provider.rs  main.rs  mdns.rs  process_manager.rs  routes.rs  startup.rs  terminal_daemon.rs  types.rs
crates/arbor-mcp/: Cargo.toml
crates/arbor-mcp/src/: lib.rs  main.rs
crates/arbor-mosh/src/: shell.rs
crates/arbor-ssh/src/: connection.rs  provisioner.rs
docs/: http-api-v1.md  mcp.md
packaging/macos/: Info.plist
scripts/: build-ghostty-vt-bridge.sh
scripts/ci/: check-binary-names.sh  package-linux.sh  package-macos.sh  package-windows.ps1
(+13 files in other folders)
